--- a/parts/blocks.jade
+++ b/parts/blocks.jade
@@ -1,6 +1,6 @@
 template(name='skve')
     // a.ui.image.big.link.label.set_session_v(class=calculated_class)
-    .ui.button.set_session_v.say(class=calculated_class title=t)
+    .ui.circular.basic.button.set_session_v.say(class=calculated_class title=t)
         // if i
         if selected 
             // +i n=i cl='ui mini inline image'
@@ -479,15 +479,15 @@ template(name='user_string_toggle')
 
 
 template(name='key_value_edit')
-    a.ui.compact.large.button.set_key_value(class=set_key_value_class title=value href='#')
-        if icon
+    a.ui.compact.large.circular.button.set_key_value(class=set_key_value_class title=value href='#')
+        if i
             // +icon name=icon cl='ui avatar image'
-            i.icon(class=icon)
+            i.icon(class=i)
         unless icon_only
-            if label
-                |#{label}
+            if l
+                |#{l}
             else 
-                |#{value}
+                |#{v}
         
 template(name='user_key_value_edit')
     .ui.compact.button.set_key_value(class=set_key_value_class)
