--- a/parts/profile/user_credit.jade
+++ b/parts/profile/user_credit.jade
@@ -9,6 +9,12 @@ template(name='user_credit')
             .smallscroll
                 .ui.header dollar debits
                 each received_dollar_debits
+                    a.item(href="/debit/#{_id}/view") #{title} #{amount} #{points} #{when}, #{description}
+                        each tags
+                            .ui.small.basic.label #{this}
+                        +target_info
+                
+                each received_dollar_debits
                     .ui.segment
                         if target.profile_image_id
                             img.ui.avatar.image(src="{{c.url target.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
