--- a/parts/profile/user_edit.jade
+++ b/parts/profile/user_edit.jade
@@ -1,7 +1,7 @@
 template(name='user_edit_layout')
     +nav
     .ui.bottom.attached.pushable.segment
-        #main_area.global_container.pusher(class=currentUser.invert_class)
+        #main_area.global_container.pusher
             with current_user          
                 .ui.stackable.padded.grid
                     .row
