--- a/parts/profile/profile.jade
+++ b/parts/profile/profile.jade
@@ -170,15 +170,69 @@ template(name='user_dashboard')
                     each feed_items 
                         +feed_item
                 .ui.two.column.stackable.grid
-                    .column
+                    .column.smallscroll
                         .ui.header bounties from
-                        .ui.list
+                        .ui.divided.list
                             each bounties_from
+                                .ui.item
+                                    if is_author
+                                        +session_edit_toggle
+                                        if is_editing_this
+                                            +text_edit key='description' direct=true
+                                            +number_edit key='karma_bounty' direct=true
+                                    .ui.inline.header #{description}
+                                    .ui.inline.header #{karma_bounty}
+                                    // +boolean_view key='require_view' label='view' icon='eye' icon_only=true
+                                    // +boolean_view key='require_vote' label='vote' icon='thumbs up' icon_only=true
+                                    // +boolean_view key='require_reply' label='reply' icon='reply' icon_only=true
+                                    if require_view
+                                        +boolean_view key='view_requirement_met' label='view requirement met' icon_only=true icon='eye'
+                                    if require_vote
+                                        +boolean_view key='vote_requirement_met' label='vote requirement met' icon_only=true icon='thumbs up'
+                                    if require_reply
+                                        +boolean_view key='reply_requirement_met' label='reply requirement met' icon_only=true icon='reply'
+                                    +target_info
+                                    +print_this
+                                    +author_info
+                                    .ui.label #{status}
+                                    a.ui.icon.basic.circular.button(href="/b/#{_id}")
+                                        i.chevron.right.icon
                                 a.item(href="/b/#{_id}")
                                     |#{when} 
                                     +print_this
-                    .column
+                                a.item(href="/b/#{_id}")
+                                    |#{when} 
+                                    +print_this
+                    .column.smallscroll
                         .ui.header bounties to
+                        .ui.divided.list
+                            each bounties_to
+                                .ui.item
+                                    if is_author
+                                        +session_edit_toggle
+                                        if is_editing_this
+                                            +text_edit key='description' direct=true
+                                            +number_edit key='karma_bounty' direct=true
+                                    .ui.inline.header #{description}
+                                    .ui.inline.header #{karma_bounty}
+                                    // +boolean_view key='require_view' label='view' icon='eye' icon_only=true
+                                    // +boolean_view key='require_vote' label='vote' icon='thumbs up' icon_only=true
+                                    // +boolean_view key='require_reply' label='reply' icon='reply' icon_only=true
+                                    if require_view
+                                        +boolean_view key='view_requirement_met' label='view requirement met' icon_only=true icon='eye'
+                                    if require_vote
+                                        +boolean_view key='vote_requirement_met' label='vote requirement met' icon_only=true icon='thumbs up'
+                                    if require_reply
+                                        +boolean_view key='reply_requirement_met' label='reply requirement met' icon_only=true icon='reply'
+                                    +target_info
+                                    +print_this
+                                    +author_info
+                                    .ui.label #{status}
+                                    a.ui.icon.basic.circular.button(href="/b/#{_id}")
+                                        i.chevron.right.icon
+                                a.item(href="/b/#{_id}")
+                                    |#{when} 
+                                    +print_this
                 if currentUser
                     .ui.two.column.stackable.grid
                         .column
