--- a/parts/shop.jade
+++ b/parts/shop.jade
@@ -46,7 +46,7 @@ template(name='shop_item')
                 |#{title} #{when} 
             +author_info
             |#{description} #{body}
-            .ui.inline.header #{karma_price}p
+            .ui.inline.header #{price}p
             // if has_enough
             if can_buy
                 .ui.circular.basic.button.buy
@@ -78,10 +78,21 @@ template(name='shop_view')
                     +bounties
                     div
                     each receipts
-                        .ui.header #{when}
+                        .ui.segment
+                            .ui.header #{when}
+                            .ui.inline.header purchased at #{purchase_price}
+                            .ui.basic.button.return
+                                |return
+                            if is_author
+                                +text_edit key='notes' direct=true
+                            +author_info
                 .four.wide.column.scrolling
-                    .ui.large.green.button.buy
-                        |buy
+                    if can_buy
+                        .ui.large.green.button.buy
+                            |buy for #{price}p
+                    else
+                        .ui.large.green.disabled.button.buy
+                            |buy for #{price}p
                     .ui.header #{inventory}
                     a.ui.circular.basic.large.icon.button(href="/shop")
                         i.chevron.left.large.icon
@@ -155,5 +166,5 @@ template(name='shop_edit')
                         +image_edit key='image_id' label='image' direct=true
                     if can_buy
                         +text_edit key='unit_name' label='unit name'
-                        +number_edit key='karma_price' label='karma price'
+                        +number_edit key='price' label='karma price'
                         +number_edit key='inventory' label='inventory'
