--- a/parts/client/nav.jade
+++ b/parts/client/nav.jade
@@ -12,6 +12,8 @@ template(name='nav')
         if currentUser
             a.icon.item.blink.clear.go_shop(href="/shop" class="{{isActiveRoute 'shop'}}")
                 i.line.shop.large.icon
+            a.icon.item.blink.clear.go_shop(href="/bounties" class="{{isActiveRoute 'bounties'}}")
+                i.line.hand.holding.large.icon
             a.icon.item.blink.clear(href="/users" class="{{isActiveRoute 'users'}}")
                 i.users.large.icon
         // .item(title='session karma')
